// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid-destructuring-arr.js format 1`] = `
"Invalid optional chaining in the left-hand side of array destructuring pattern. (1:2)
> 1 | [a?.b] = [];
    |  ^
  2 |
Cause: Invalid optional chaining in the left-hand side of array destructuring pattern. (1:1)"
`;

exports[`invalid-destructuring-arr.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | [a?.b] = [];
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:1)"
`;

exports[`invalid-destructuring-arr.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | [a?.b] = [];
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-destructuring-arr.js format 4`] = `
"Invalid left-hand side in assignment (1:10)
> 1 | [a?.b] = [];
    |          ^
  2 |
Cause: [1:9-1:10]: Invalid left-hand side in assignment"
`;

exports[`invalid-destructuring-arr.js format 5`] = `
"Cannot assign to this expression (1:2)
> 1 | [a?.b] = [];
    |  ^^^^
  2 |"
`;

exports[`invalid-destructuring-arr.js format 6`] = `
"Invalid optional chaining in the left-hand side of array destructuring pattern. (1:2)
> 1 | [a?.b] = [];
    |  ^
  2 |
Cause: Invalid optional chaining in the left-hand side of array destructuring pattern. (1:1)"
`;

exports[`invalid-destructuring-obj.js format 1`] = `
"Invalid optional chaining in the left-hand side of object destructuring pattern. (1:10)
> 1 | ({ prop: a?.b } = {});
    |          ^
  2 |
Cause: Invalid optional chaining in the left-hand side of object destructuring pattern. (1:9)"
`;

exports[`invalid-destructuring-obj.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:10)
> 1 | ({ prop: a?.b } = {});
    |          ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:9)"
`;

exports[`invalid-destructuring-obj.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:10)
> 1 | ({ prop: a?.b } = {});
    |          ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-destructuring-obj.js format 4`] = `
"Invalid left-hand side in assignment (1:19)
> 1 | ({ prop: a?.b } = {});
    |                   ^
  2 |
Cause: [1:18-1:19]: Invalid left-hand side in assignment"
`;

exports[`invalid-destructuring-obj.js format 5`] = `
"Cannot assign to this expression (1:10)
> 1 | ({ prop: a?.b } = {});
    |          ^^^^
  2 |"
`;

exports[`invalid-destructuring-obj.js format 6`] = `
"Invalid optional chaining in the left-hand side of object destructuring pattern. (1:10)
> 1 | ({ prop: a?.b } = {});
    |          ^
  2 |
Cause: Invalid optional chaining in the left-hand side of object destructuring pattern. (1:9)"
`;

exports[`invalid-fn-param.js format 1`] = `
"Unexpected token, expected "," (1:13)
> 1 | function f(a?.b) {}
    |             ^
  2 |
Cause: Unexpected token, expected "," (1:12)"
`;

exports[`invalid-fn-param.js format 2`] = `
"Unexpected token (1:13)
> 1 | function f(a?.b) {}
    |             ^
  2 |
Cause: Unexpected token (1:12)"
`;

exports[`invalid-fn-param.js format 3`] = `
"Unexpected token ?. (1:13)
> 1 | function f(a?.b) {}
    |             ^
  2 |
Cause: Unexpected token ?."
`;

exports[`invalid-fn-param.js format 4`] = `
"Expected ')' (1:13)
> 1 | function f(a?.b) {}
    |             ^^
  2 |
Cause: [1:12-1:14]: Expected ')'"
`;

exports[`invalid-fn-param.js format 5`] = `
"Expected \`,\` or \`)\` but found \`?.\` (1:13)
> 1 | function f(a?.b) {}
    |             ^^
  2 |"
`;

exports[`invalid-fn-param.js format 6`] = `
"Unexpected token, expected "," (1:13)
> 1 | function f(a?.b) {}
    |             ^
  2 |
Cause: Unexpected token, expected "," (1:12)"
`;

exports[`invalid-fn-param-arrow.js format 1`] = `
"Invalid optional chaining in the left-hand side of function parameter list. (1:2)
> 1 | (a?.b) => {}
    |  ^
  2 |
Cause: Invalid optional chaining in the left-hand side of function parameter list. (1:1)"
`;

exports[`invalid-fn-param-arrow.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | (a?.b) => {}
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:1)"
`;

exports[`invalid-fn-param-arrow.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | (a?.b) => {}
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-fn-param-arrow.js format 4`] = `
"The left-hand side of the arrow can only be destructed through assignment (1:8)
> 1 | (a?.b) => {}
    |        ^^
  2 |
Cause: [1:7-1:9]: The left-hand side of the arrow can only be destructed through assignment"
`;

exports[`invalid-fn-param-arrow.js format 5`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:7)
> 1 | (a?.b) => {}
    |       ^
  2 |"
`;

exports[`invalid-fn-param-arrow.js format 6`] = `
"Invalid optional chaining in the left-hand side of function parameter list. (1:2)
> 1 | (a?.b) => {}
    |  ^
  2 |
Cause: Invalid optional chaining in the left-hand side of function parameter list. (1:1)"
`;

exports[`invalid-fn-param-assign.js format 1`] = `
"Unexpected token, expected "," (1:13)
> 1 | function f(a?.b = c) {}
    |             ^
  2 |
Cause: Unexpected token, expected "," (1:12)"
`;

exports[`invalid-fn-param-assign.js format 2`] = `
"Unexpected token (1:13)
> 1 | function f(a?.b = c) {}
    |             ^
  2 |
Cause: Unexpected token (1:12)"
`;

exports[`invalid-fn-param-assign.js format 3`] = `
"Unexpected token ?. (1:13)
> 1 | function f(a?.b = c) {}
    |             ^
  2 |
Cause: Unexpected token ?."
`;

exports[`invalid-fn-param-assign.js format 4`] = `
"Expected ')' (1:13)
> 1 | function f(a?.b = c) {}
    |             ^^
  2 |
Cause: [1:12-1:14]: Expected ')'"
`;

exports[`invalid-fn-param-assign.js format 5`] = `
"Expected \`,\` or \`)\` but found \`?.\` (1:13)
> 1 | function f(a?.b = c) {}
    |             ^^
  2 |"
`;

exports[`invalid-fn-param-assign.js format 6`] = `
"Unexpected token, expected "," (1:13)
> 1 | function f(a?.b = c) {}
    |             ^
  2 |
Cause: Unexpected token, expected "," (1:12)"
`;

exports[`invalid-for-await-of.js format 1`] = `
"Invalid optional chaining in the left-hand side of for-of statement. (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-of statement. (1:5)"
`;

exports[`invalid-for-await-of.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:5)"
`;

exports[`invalid-for-await-of.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-for-await-of.js format 4`] = `
"Invalid left-hand side in for-of (1:11)
> 1 | for (a?.b of x);
    |           ^^
  2 |
Cause: [1:10-1:12]: Invalid left-hand side in for-of"
`;

exports[`invalid-for-await-of.js format 5`] = `
"Cannot assign to this expression (1:6)
> 1 | for (a?.b of x);
    |      ^^^^
  2 |"
`;

exports[`invalid-for-await-of.js format 6`] = `
"Invalid optional chaining in the left-hand side of for-of statement. (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-of statement. (1:5)"
`;

exports[`invalid-for-in.js format 1`] = `
"Invalid optional chaining in the left-hand side of for-in statement. (1:6)
> 1 | for (a?.b in x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-in statement. (1:5)"
`;

exports[`invalid-for-in.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b in x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:5)"
`;

exports[`invalid-for-in.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b in x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-for-in.js format 4`] = `
"Invalid left-hand side in for-in (1:11)
> 1 | for (a?.b in x);
    |           ^^
  2 |
Cause: [1:10-1:12]: Invalid left-hand side in for-in"
`;

exports[`invalid-for-in.js format 5`] = `
"Cannot assign to this expression (1:6)
> 1 | for (a?.b in x);
    |      ^^^^
  2 |"
`;

exports[`invalid-for-in.js format 6`] = `
"Invalid optional chaining in the left-hand side of for-in statement. (1:6)
> 1 | for (a?.b in x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-in statement. (1:5)"
`;

exports[`invalid-for-of.js format 1`] = `
"Invalid optional chaining in the left-hand side of for-of statement. (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-of statement. (1:5)"
`;

exports[`invalid-for-of.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:5)"
`;

exports[`invalid-for-of.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-for-of.js format 4`] = `
"Invalid left-hand side in for-of (1:11)
> 1 | for (a?.b of x);
    |           ^^
  2 |
Cause: [1:10-1:12]: Invalid left-hand side in for-of"
`;

exports[`invalid-for-of.js format 5`] = `
"Cannot assign to this expression (1:6)
> 1 | for (a?.b of x);
    |      ^^^^
  2 |"
`;

exports[`invalid-for-of.js format 6`] = `
"Invalid optional chaining in the left-hand side of for-of statement. (1:6)
> 1 | for (a?.b of x);
    |      ^
  2 |
Cause: Invalid optional chaining in the left-hand side of for-of statement. (1:5)"
`;

exports[`invalid-inc-postfix.js format 1`] = `
"Invalid optional chaining in the left-hand side of postfix operation. (1:1)
> 1 | a?.b++;
    | ^
  2 |
Cause: Invalid optional chaining in the left-hand side of postfix operation. (1:0)"
`;

exports[`invalid-inc-postfix.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b++;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:0)"
`;

exports[`invalid-inc-postfix.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b++;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-inc-postfix.js format 4`] = `
"Invalid increment/decrement operand (1:5)
> 1 | a?.b++;
    |     ^^
  2 |
Cause: [1:4-1:6]: Invalid increment/decrement operand"
`;

exports[`invalid-inc-postfix.js format 5`] = `
"Cannot assign to this expression (1:1)
> 1 | a?.b++;
    | ^^^^
  2 |"
`;

exports[`invalid-inc-postfix.js format 6`] = `
"Invalid optional chaining in the left-hand side of postfix operation. (1:1)
> 1 | a?.b++;
    | ^
  2 |
Cause: Invalid optional chaining in the left-hand side of postfix operation. (1:0)"
`;

exports[`invalid-inc-prefix.js format 1`] = `
"Invalid optional chaining in the left-hand side of prefix operation. (1:3)
> 1 | ++a?.b;
    |   ^
  2 |
Cause: Invalid optional chaining in the left-hand side of prefix operation. (1:2)"
`;

exports[`invalid-inc-prefix.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:3)
> 1 | ++a?.b;
    |   ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:2)"
`;

exports[`invalid-inc-prefix.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:3)
> 1 | ++a?.b;
    |   ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`invalid-inc-prefix.js format 4`] = `
"Invalid increment/decrement operand (1:7)
> 1 | ++a?.b;
    |       ^
  2 |
Cause: [1:6-1:7]: Invalid increment/decrement operand"
`;

exports[`invalid-inc-prefix.js format 5`] = `
"Cannot assign to this expression (1:3)
> 1 | ++a?.b;
    |   ^^^^
  2 |"
`;

exports[`invalid-inc-prefix.js format 6`] = `
"Invalid optional chaining in the left-hand side of prefix operation. (1:3)
> 1 | ++a?.b;
    |   ^
  2 |
Cause: Invalid optional chaining in the left-hand side of prefix operation. (1:2)"
`;

exports[`valid-complex-case.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let?.()[a] =1;
let?.[a] = 1;

=====================================output=====================================
let?.()[a] = 1;
let?.[a] = 1;

================================================================================
`;

exports[`valid-complex-case.js format 2`] = `
"The keyword 'let' is reserved (1:1)
> 1 | let?.()[a] =1;
    | ^
  2 | let?.[a] = 1;
  3 |
Cause: The keyword 'let' is reserved (1:0)"
`;

exports[`valid-complex-case.js format 3`] = `
"The keyword 'let' is reserved (1:1)
> 1 | let?.()[a] =1;
    | ^
  2 | let?.[a] = 1;
  3 |
Cause: The keyword 'let' is reserved"
`;

exports[`valid-complex-case.js format 4`] = `
"\`let\` declaration not allowed here and \`let\` cannot be a regular var name in strict mode (1:4)
> 1 | let?.()[a] =1;
    |    ^^
  2 | let?.[a] = 1;
  3 |
Cause: [1:3-1:5]: \`let\` declaration not allowed here and \`let\` cannot be a regular var name in strict mode"
`;

exports[`valid-complex-case.js format 5`] = `
"Cannot assign to this expression (1:1)
> 1 | let?.()[a] =1;
    | ^^^^^^^^^^
  2 | let?.[a] = 1;
  3 |"
`;

exports[`valid-lhs-eq.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a?.b.c = d;

=====================================output=====================================
a?.b.c = d;

================================================================================
`;

exports[`valid-lhs-eq.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b.c = d;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:0)"
`;

exports[`valid-lhs-eq.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b.c = d;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`valid-lhs-eq.js format 4`] = `
"Cannot assign to this expression (1:1)
> 1 | a?.b.c = d;
    | ^^^^^^
  2 |"
`;

exports[`valid-lhs-plus-eq.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a?.b.c += d;

=====================================output=====================================
a?.b.c += d;

================================================================================
`;

exports[`valid-lhs-plus-eq.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b.c += d;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:0)"
`;

exports[`valid-lhs-plus-eq.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | a?.b.c += d;
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`valid-lhs-plus-eq.js format 4`] = `
"Cannot assign to this expression (1:1)
> 1 | a?.b.c += d;
    | ^^^^^^
  2 |"
`;

exports[`valid-parenthesized.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(a?.b) = c;

=====================================output=====================================
a?.b = c;

================================================================================
`;

exports[`valid-parenthesized.js format 2`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | (a?.b) = c;
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:1)"
`;

exports[`valid-parenthesized.js format 3`] = `
"Optional chaining cannot appear in left-hand side (1:2)
> 1 | (a?.b) = c;
    |  ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`valid-parenthesized.js format 4`] = `
"Invalid left-hand side in assignment (1:8)
> 1 | (a?.b) = c;
    |        ^
  2 |
Cause: [1:7-1:8]: Invalid left-hand side in assignment"
`;

exports[`valid-parenthesized.js format 5`] = `
"Cannot assign to this expression (1:2)
> 1 | (a?.b) = c;
    |  ^^^^
  2 |"
`;
